--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_width="174dp"
         android:layout_height="51dp"
         android:layout_marginTop="176dp"
+        android:autofillHints="5"
         android:ems="10"
         android:hint="@string/enter_the_number"
         android:inputType="number"
@@ -46,5 +47,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnСonfirm"
         app:layout_constraintVertical_bias="0.294" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
