--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,45 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/edText"
-        android:layout_width="174dp"
-        android:layout_height="51dp"
-        android:layout_marginTop="176dp"
-        android:ems="10"
-        android:hint="@string/enter_the_number"
-        android:inputType="number"
-        android:minHeight="48dp"
-        android:textColorHint="#757575"
-        android:textSize="24sp"
+    <TextView
+        android:id="@+id/tvFirstName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:hint="@string/name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btnСonfirm"
+    <TextView
+        android:id="@+id/tvLastName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:text="@string/confirm"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edText" />
+        android:layout_marginTop="32dp"
+        android:hint="@string/lastName"
+        app:layout_constraintEnd_toEndOf="@+id/tvFirstName"
+        app:layout_constraintStart_toStartOf="@+id/tvFirstName"
+        app:layout_constraintTop_toBottomOf="@+id/tvFirstName" />
 
     <TextView
-        android:id="@+id/string"
+        android:id="@+id/tvAge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/countdown_time"
-        android:textSize="24sp"
-        android:textColor="@color/black"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnСonfirm"
-        app:layout_constraintVertical_bias="0.294" />
-
+        android:layout_marginTop="32dp"
+        android:hint="@string/age"
+        app:layout_constraintEnd_toEndOf="@+id/tvLastName"
+        app:layout_constraintStart_toStartOf="@+id/tvLastName"
+        app:layout_constraintTop_toBottomOf="@+id/tvLastName" />
 </androidx.constraintlayout.widget.ConstraintLayout>
