--- a/app/src/main/res/layout/activity_mavriki.xml
+++ b/app/src/main/res/layout/activity_mavriki.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="3">
+    android:weightSum="4">
+
 
     <LinearLayout
         android:id="@+id/red"
@@ -11,6 +12,15 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="@color/red"
+        android:orientation="vertical" />
+
+
+    <LinearLayout
+        android:id="@+id/blue"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:background="@color/blue"
         android:orientation="vertical" />
 
     <LinearLayout
@@ -27,5 +37,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="@color/green"
-        android:orientation="vertical"/>
+        android:orientation="vertical" />
+
+
 </LinearLayout>
