--- a/app/src/main/res/layout/fragment_buttons.xml
+++ b/app/src/main/res/layout/fragment_buttons.xml
@@ -11,10 +11,19 @@
         android:id="@+id/btnDz14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="@string/dz14"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnDz15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/dz15"
+        app:layout_constraintEnd_toEndOf="@+id/btnDz14"
+        app:layout_constraintStart_toStartOf="@+id/btnDz14"
+        app:layout_constraintTop_toBottomOf="@+id/btnDz14" />
 </androidx.constraintlayout.widget.ConstraintLayout>
