--- a/app/src/main/res/layout/fragment_buttons.xml
+++ b/app/src/main/res/layout/fragment_buttons.xml
@@ -26,4 +26,14 @@
         app:layout_constraintEnd_toEndOf="@+id/btnDz14"
         app:layout_constraintStart_toStartOf="@+id/btnDz14"
         app:layout_constraintTop_toBottomOf="@+id/btnDz14" />
+
+    <Button
+        android:id="@+id/btnDz16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/dz16"
+        app:layout_constraintEnd_toEndOf="@+id/btnDz15"
+        app:layout_constraintStart_toStartOf="@+id/btnDz15"
+        app:layout_constraintTop_toBottomOf="@+id/btnDz15" />
 </androidx.constraintlayout.widget.ConstraintLayout>
