добавил viewmodel в дз14

--- a/app/src/main/res/layout/fragment_dz14.xml
+++ b/app/src/main/res/layout/fragment_dz14.xml
@@ -10,10 +10,11 @@
         android:id="@+id/tvQuestion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="216dp"
+        android:layout_marginTop="60dp"
         android:gravity="center_horizontal"
         android:text="Вопрос"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,6 +37,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/tvAnswer"
         app:layout_constraintStart_toStartOf="@+id/tvAnswer"
-        app:layout_constraintTop_toBottomOf="@+id/tvAnswer" />
+        app:layout_constraintTop_toBottomOf="@+id/tvAnswer"
+        app:layout_constraintVertical_bias="0.252" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
